--- a/src/Diamante/FrontBundle/Resources/assets/less/modules/Comment/attachments.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/modules/Comment/attachments.less
@@ -24,10 +24,16 @@
   a {
     display: block;
   }
-  img {
+  .media {
     display: block;
-    max-width: 100%;
+    text-align: center;
+    background: #D8D8D8;
     margin-bottom: 5px;
+  }
+  img {
+    display: inline-block;
+    margin-bottom: 0;
+    max-width: 100%;
     vertical-align: top;
   }
   > li {
@@ -83,6 +89,9 @@
   display: block !important;
   margin-bottom: 0;
   padding-right: 0;
+}
+#comment-edit-attachment-drop {
+  padding-left: 26px;
 }
 .comments-item {
   .attachments-list {
