--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Comment/templates/item.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Comment/templates/item.ejs
@@ -20,7 +20,9 @@
       <li>
         <a href="<%= attachment.file.url %>" title="Download: <%= attachment.file.filename %>">
           <% if(attachment.thumbnails) { %>
-            <img src="<%= attachment.thumbnails.url %>" title="Preview of <%= attachment.file.filename %>">
+            <span class="media">
+                <img src="<%= attachment.thumbnails.url %>" title="Preview of <%= attachment.file.filename %>">
+            </span>
           <% } %>
           <%= attachment.file.filename %>
         </a>
