DIAM-1625 DIAM-1637 DIAM-1653

--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/groupings/automation-groupings-edit-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/groupings/automation-groupings-edit-template.ejs
@@ -19,17 +19,15 @@
             Add Group
         </button>
     </div>
-    <% if(!hasChildren) { %>
     <div class="btn-group">
         <button type="button" class="btn btn-success" data-action="add-item">
             Add Conditions
         </button>
     </div>
-    <% } %>
     <% if(hasParent) { %>
     <div class="btn-group">
         <button type="button" class="btn btn-danger" data-action="delete-group">
-            Delete
+            Delete Group
         </button>
     </div>
     <% } %>
