--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/groupings/automation-groupings-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/groupings/automation-groupings-template.ejs
@@ -3,7 +3,9 @@
     <label for="automation-conditions-entity">Conditions</label>
 </div>
 <% } %>
-<strong class="value"><%= config.connectors[connector]%></strong>
+<div class="groupings-connector">
+    <strong class="value"><%= config.connectors[connector] %></strong>
+</div>
 <div class="grouping-list">
 
 </div>
