--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Comment/templates/form.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Comment/templates/form.ejs
@@ -10,7 +10,7 @@
     <div id="comment<%= isEdit? '-edit':''%>-attachment-drop"></div>
     <div class="comment-form-actions">
         <% if(isEdit){ %>
-        <button type="reset" class="btn btn-defautl js-cancel">Cancel</button>
+        <button type="reset" class="btn btn-default js-cancel">Cancel</button>
         <button type="submit" class="btn btn-primary js-submit">Edit Comment</button>
         <% } else { %>
         <button type="submit" class="btn btn-primary js-submit">Add Comment</button>
