--- a/src/Diamante/FrontBundle/Resources/assets/less/modules/Attachment/main.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/modules/Attachment/main.less
@@ -86,7 +86,7 @@
   }
   .btn {
     line-height: 1;
-    color: #D8D8D8;
+    color: @btn-icon-color;
     padding: 0;
     &:focus {
       box-shadow: none;
