--- a/src/Diamante/FrontBundle/Resources/assets/less/modules/Comment/attachments.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/modules/Comment/attachments.less
@@ -27,7 +27,7 @@
   .media {
     display: block;
     text-align: center;
-    background: #D8D8D8;
+    background: @btn-icon-color;
     margin-bottom: 5px;
   }
   img {
