--- a/src/Diamante/FrontBundle/Resources/assets/less/variables.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/variables.less
@@ -21,6 +21,8 @@
 @btn-primary-bg: @mainColor;
 @btn-primary-border: @mainColor;
 
+@btn-icon-color: #d0d0d0;
+
 // Modals
 @modal-backdrop-bg: #fff;
 @modal-backdrop-opacity: .9;
