DIAM-1675 Need to rename button "Edit Comment" DIAM-1522 Need to update "Your task’s list is empty." message on the Portal DIAM-1483 Deleting branches: Need to change warning message

--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Comment/templates/form.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Comment/templates/form.ejs
@@ -11,7 +11,7 @@
     <div class="comment-form-actions">
         <% if(isEdit){ %>
         <button type="reset" class="btn btn-default js-cancel">Cancel</button>
-        <button type="submit" class="btn btn-primary js-submit">Edit Comment</button>
+        <button type="submit" class="btn btn-primary js-submit">Save Changes</button>
         <% } else { %>
         <button type="submit" class="btn btn-primary js-submit">Add Comment</button>
         <% } %>
