--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Comment/templates/form.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Comment/templates/form.ejs
@@ -11,7 +11,7 @@
     <div class="comment-form-actions">
         <% if(isEdit){ %>
         <button type="reset" class="btn btn-default js-cancel">Cancel</button>
-        <button type="submit" class="btn btn-primary js-submit">Edit Comment</button>
+        <button type="submit" class="btn btn-primary js-submit">Save Changes</button>
         <% } else { %>
         <button type="submit" class="btn btn-primary js-submit">Add Comment</button>
         <% } %>
