--- a/src/Diamante/FrontBundle/Resources/public/css/wysiwyg.css
+++ b/src/Diamante/FrontBundle/Resources/public/css/wysiwyg.css
@@ -355,6 +355,6 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #000000;
-  background-color: #ffffff;
+  color: #000;
+  background-color: #fff;
 }
