--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-edit-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-edit-template.ejs
@@ -43,7 +43,11 @@
             <select name="actions[value][<%= index %>]" data-attr="value">
                 <% for(var key in properties[property].frontend_options) { %>
                 <option value="<%= key %>"<%= key == value ? ' selected' : ''%>>
+                    <% if (properties[property].type == 'user'){ %>
+                    <%= properties[property].frontend_options[key].email %>
+                    <% } else { %>
                     <%= properties[property].frontend_options[key] %>
+                    <% } %>
                 </option>
                 <% } %>
             </select>
