--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-template.ejs
@@ -18,7 +18,13 @@
             <% if(properties[property].type == 'string' || properties[property].type == 'bool'){ %>
                 <strong class="value"><%= value %></strong>
             <% } else if (properties[property].frontend_options){ %>
-                <strong class="value"><%= properties[property].frontend_options[value] %></strong>
+                <strong class="value">
+                    <% if (properties[property].type == 'user'){ %>
+                    <%= properties[property].frontend_options[value].email %>
+                    <% } else { %>
+                    <%= properties[property].frontend_options[value] %>
+                    <% } %>
+                </strong>
             <% } %>
         <% } %>
     <% } %>
