DIAM-1579 fix ticket link in email template

--- a/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.txt.twig
+++ b/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.txt.twig
@@ -15,7 +15,7 @@
     {% endfor %}
 {% endif %}
 
-You can view this ticket {{ ticketKey }} in DiamanteDesk: {{ render_ticket_url(ticketKey, isOroUser) }}
+You can view this ticket {{ ticketKey }} in DiamanteDesk: {{ render_ticket_url(ticketKey, recipient) }}
 
 - DiamanteDesk
 
