--- a/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.html.twig
+++ b/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.html.twig
@@ -46,7 +46,7 @@
                     {% endif %}
 
                     <div style="margin-top: 15px; font-size: 14px; font-weight: 200; line-height: 18px;">
-                        You can view this ticket <a href="{{ render_ticket_url(ticketKey, isOroUser) }}">{{ ticketKey }}</a> in
+                        You can view this ticket <a href="{{ render_ticket_url(ticketKey, recipient) }}">{{ ticketKey }}</a> in
                         DiamanteDesk
                     </div>
 
