DIAM-1578 text changes in the email template

--- a/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.txt.twig
+++ b/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.txt.twig
@@ -4,7 +4,7 @@
 
 {% if changes is defined %}
     {% for key, value in changes %}
-        - {{ key }}: {{ attribute(value, 'new') }}
+        - {{ key|capitalize }}: {{ attribute(value, 'new')|capitalize }}
     {% endfor %}
 {% endif %}
 
