DIAM-1580 hide attachments label if they don't exists

--- a/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.txt.twig
+++ b/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.txt.twig
@@ -8,7 +8,7 @@
     {% endfor %}
 {% endif %}
 
-{% if attachments is defined %}
+{% if attachments is defined and attachments is not empty %}
     Attachments:
     {% for key, value in attachments %}
         - {{ value }}
