--- a/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.html.twig
+++ b/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.html.twig
@@ -50,7 +50,7 @@
                         DiamanteDesk
                     </div>
 
-                    {% if attachments is defined %}
+                    {% if attachments is defined and attachments is not empty %}
                         <h4 style="font-size: 16px; font-weight: 400; margin: 15px 0;">Attachments:</h4>
                         {% for key, value in attachments %}
                             <p style="font-size: 14px; font-weight: 200; line-height: 20px; margin: 0; padding: 0;">{{ value }}</p>
