--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-edit-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-edit-template.ejs
@@ -70,7 +70,7 @@
     <input type="hidden" name="actions[property][<%= index %>]" data-attr="property" value="<%= type %>" />
     <select name="actions[value][<%= index %>]" data-attr="value">
         <% for(var key in actions[type].frontend_options[entity]) { %>
-        <option value="<%= key %>"<%= key == value ? ' selected' : ''%>>
+        <option value="<%= key %>"<%= key == value ? ' selected' : key == 'null' ? ' disabled': '' %>>
             <%= actions[type].frontend_options[entity][key] %>
         </option>
         <% } %>
