--- a/src/Diamante/AutomationBundle/Resources/public/css/less/main.less
+++ b/src/Diamante/AutomationBundle/Resources/public/css/less/main.less
@@ -69,3 +69,74 @@
     border: 3px solid #eee
   }
 }
+
+
+.diam-modal-as-dialog {
+  width: 300px;
+  margin-left: -150px;
+  top: 50%;
+  margin-top: -76px;
+  border: 1px solid #bbb;
+  background-color: #fafafa;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 1px 22px rgba(0,0,0,0.4) !important;
+  -moz-box-shadow: 0 1px 22px rgba(0,0,0,0.4) !important;
+  box-shadow: 0 1px 22px rgba(0,0,0,0.4) !important;
+  .modal-header {
+    margin: -1px -1px 0 -1px;
+    border-radius: 4px 4px 0 0;
+    border-bottom: 1px solid #000;
+    background-color: #404952;
+    background-image: -webkit-gradient(linear,0 0,0 100%,from(#47505a),to(#363e47));
+    background-image: -webkit-linear-gradient(top,#47505a,#363e47);
+    background-image: -moz-linear-gradient(top,#47505a,#363e47);
+    background-image: linear-gradient(to bottom,#47505a,#363e47);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff47505a', endColorstr='#ff363e47', GradientType=0);
+    padding: 6px 15px;
+    h3 {
+      color: #fff;
+      line-height: 20px;
+      font-size: 13px;
+      display: block;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    .close {
+      opacity: 1;
+      display: inline-block;
+      border: 1px solid #272e36;
+      width: 24px;
+      height: 22px;
+      color: #fff;
+      font-size:14px;
+      text-align: center;
+      line-height: 19px;
+      text-shadow: 0 1px 0 #45505c;
+      margin: 0 !important;
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px;
+      background-color: #6b7580;
+      background-image: -webkit-gradient(linear,0 0,0 100%,from(#838d98),to(#46515d));
+      background-image: -webkit-linear-gradient(top,#838d98,#46515d);
+      background-image: -moz-linear-gradient(top,#838d98,#46515d);
+      background-image: linear-gradient(to bottom,#838d98,#46515d);
+      background-repeat: repeat-x;
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff838d98', endColorstr='#ff46515d', GradientType=0);
+      &:hover {
+        background-color: #5e6874;
+        background-image: -webkit-gradient(linear,0 0,0 100%,from(#75808c),to(#3b444e));
+        background-image: -webkit-linear-gradient(top,#75808c,#3b444e);
+        background-image: -moz-linear-gradient(top,#75808c,#3b444e);
+        background-image: linear-gradient(to bottom,#75808c,#3b444e);
+        background-repeat: repeat-x;
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff75808c', endColorstr='#ff3b444e', GradientType=0);
+      }
+    }
+  }
+  .modal-body {
+    padding: 10px;
+  }
+}
