DIAM-1642 fix editor name in email notification

--- a/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.html.twig
+++ b/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.html.twig
@@ -20,7 +20,7 @@
               <tr>
                 <td style="width: 100%; text-align: left; vertical-align: top; margin: 0; padding: 0;" align="left" valign="top">
                   <h1 style="font-size: 18px; font-weight: 400; margin: 0 0 25px;">
-                    {{ header|trans }} by {{ user }}
+                    {{ header|trans }} by {{ editor }}
                   </h1>
 
                     {% if changes is defined %}
