--- a/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.txt.twig
+++ b/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.txt.twig
@@ -1,6 +1,6 @@
 {{ delimiter }}
 
-{{ header|trans }} by {{ user }}
+{{ header|trans }} by {{ editor }}
 
 {% if changes is defined %}
     {% for key, value in changes %}
